force-app/main/default/objects/OCE__AccountTerritoryFields__c/OCE__AccountTerritoryFields__c.object-meta.xml
<CustomObject>
    <description>Account Territory Fields stores relation between Account and Account Address and User. Indicates the preferred Address for different Users and Accounts.</description>
    <label>Account Territory Fields</label>
    <nameField>
        <displayFormat>ATF-{000000000}</displayFormat>
        <label>User Territory Fields Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Territory Fields</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>