force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/AdoptionLadder__c.field-meta.xml
<CustomField>
    <fullName>AdoptionLadder__c</fullName>
    <description>Adoption Ladder</description>
    <inlineHelpText>Adoption Ladder</inlineHelpText>
    <label>Adoption Ladder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>