force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/HCO_Volume_Rank__c.field-meta.xml
<CustomField>
    <fullName>HCO_Volume_Rank__c</fullName>
    <label>HCO Volume Rank</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>