force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/Lilly_NBS_Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Lilly_NBS_Meeting_Type__c</fullName>
    <label>NBS Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F2F</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>