force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/Lilly_NBS_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Lilly_NBS_Target_Date__c</fullName>
    <label>NBS Target Date</label>
    <type>Date</type>
</CustomField>