force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__AdBoards__c.field-meta.xml
<CustomField>
    <fullName>OCE1__AdBoards__c</fullName>
    <description>A,B,С,D,E,F,0 grade, basing on the sum of Ad Boards participations</description>
    <inlineHelpText>A,B,С,D,E,F,0 grade, basing on the sum of Ad Boards participations</inlineHelpText>
    <label>Ad Boards</label>
    <length>100</length>
    <type>Text</type>
</CustomField>