force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__AdBoardsNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE1__AdBoardsNumber__c</fullName>
    <description>Sum of Ad Boards participations</description>
    <inlineHelpText>Sum of Ad Boards participations</inlineHelpText>
    <label>Ad Boards Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>