force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__Awards__c.field-meta.xml
<CustomField>
    <fullName>OCE1__Awards__c</fullName>
    <description>A,B,С,D,E,F,0 grade, basing on the sum of HCP awards</description>
    <inlineHelpText>A,B,С,D,E,F,0 grade, basing on the sum of HCP awards</inlineHelpText>
    <label>Awards</label>
    <length>100</length>
    <type>Text</type>
</CustomField>