force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__AwardsNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE1__AwardsNumber__c</fullName>
    <description>Sum of HCP awards</description>
    <inlineHelpText>Sum of HCP awards</inlineHelpText>
    <label>Awards Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>