force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__ClinicalTrailsMeshTermCondition__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ClinicalTrailsMeshTermCondition__c</fullName>
    <description>List of Mesh Terms</description>
    <inlineHelpText>List of Mesh Terms</inlineHelpText>
    <label>ClinicalTrails Mesh Term Condition</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>