force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__ClinicalTrailsMeshTermIntervention__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ClinicalTrailsMeshTermIntervention__c</fullName>
    <description>Intervention / Treatment (A process or action that is the focus of a clinical study)</description>
    <inlineHelpText>Intervention / Treatment (A process or action that is the focus of a clinical study)</inlineHelpText>
    <label>ClinicalTrails Mesh Term Intervention</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>