force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__ClinicalTrialsCondition__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ClinicalTrialsCondition__c</fullName>
    <description>The disease, disorder, syndrome, illness, or injury that is being studied</description>
    <inlineHelpText>The disease, disorder, syndrome, illness, or injury that is being studied</inlineHelpText>
    <label>ClinicalTrials Condition or Disease</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>