force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__ClinicalTrialsDirIds__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ClinicalTrialsDirIds__c</fullName>
    <description>List of CT IDs, where the HCP is the Study Director.</description>
    <inlineHelpText>List of CT IDs, where the HCP is the Study Director.</inlineHelpText>
    <label>ClinicalTrials Director IDs</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>