force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__ClinicalTrialsKeywords__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ClinicalTrialsKeywords__c</fullName>
    <description>Keywords provides by the Investigator or the Sponsors</description>
    <inlineHelpText>Keywords provides by the Investigator or the Sponsors</inlineHelpText>
    <label>ClinicalTrials Keywords</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>