force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__ClinicalTrialsLastStartDate__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ClinicalTrialsLastStartDate__c</fullName>
    <description>The latest date of all the CTs, in which the HCP participated</description>
    <inlineHelpText>The latest date of all the CTs, in which the HCP participated</inlineHelpText>
    <label>ClinicalTrials Last Start Date</label>
    <type>Date</type>
</CustomField>