force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__ClinicalTrialsOtherIds__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ClinicalTrialsOtherIds__c</fullName>
    <description>List of IDs in which the HCP has participated. (withour specific role)</description>
    <inlineHelpText>List of IDs in which the HCP has participated. (withour specific role)</inlineHelpText>
    <label>ClinicalTrials Other IDs</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>