force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__ClinicalTrialsPiIds__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ClinicalTrialsPiIds__c</fullName>
    <description>List of CT IDs, where the HCP is the Principal Investigator.</description>
    <inlineHelpText>List of CT IDs, where the HCP is the Principal Investigator.</inlineHelpText>
    <label>ClinicalTrials PI IDs</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>