force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__ClinicalTrialsSubIds__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ClinicalTrialsSubIds__c</fullName>
    <description>List of CT IDs, where the HCP is the Sub Investigator.</description>
    <inlineHelpText>List of CT IDs, where the HCP is the Sub Investigator.</inlineHelpText>
    <label>ClinicalTrials Sub-IDs</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>