force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__DigitalActivityNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE1__DigitalActivityNumber__c</fullName>
    <description>Sum of  tweets and posts sent, number of articles written in digital channels</description>
    <inlineHelpText>Sum of  tweets and posts sent, number of articles written in digital channels</inlineHelpText>
    <label>Digital Activity Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>