force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__DigitalAudienceNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE1__DigitalAudienceNumber__c</fullName>
    <description>Sum of  the followers, connections, friends, viewer, links in digital channels</description>
    <inlineHelpText>Sum of  the followers, connections, friends, viewer, links in digital channels</inlineHelpText>
    <label>Digital Audience Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>