force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__DigitalImpactFactorNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE1__DigitalImpactFactorNumber__c</fullName>
    <description>Total number of HCP’s re-posts, re-tweets, mentions retrieved from Twitter, YouTube, Blogs/News and any other Webpage.</description>
    <inlineHelpText>Total number of HCP’s re-posts, re-tweets, mentions retrieved from Twitter, YouTube, Blogs/News and any other Webpage.</inlineHelpText>
    <label>Digital Impact Factor Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>