force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__DigitalNewsBlogMentionNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE1__DigitalNewsBlogMentionNumber__c</fullName>
    <description>Number of HCP mentions in News &amp; Blog</description>
    <inlineHelpText>Number of HCP mentions in News &amp; Blog</inlineHelpText>
    <label>Digital News Blog Mention Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>