force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__DigitalPresenceNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE1__DigitalPresenceNumber__c</fullName>
    <description>Digital Presence</description>
    <inlineHelpText>Digital Presence</inlineHelpText>
    <label>Digital Presence Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>