force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__DigitalScore__c.field-meta.xml
<CustomField>
    <fullName>OCE1__DigitalScore__c</fullName>
    <description>Combination of: 3 x Presence + 2 x Activity + 1 x Audience</description>
    <inlineHelpText>Combination of: 3 x Presence + 2 x Activity + 1 x Audience</inlineHelpText>
    <label>Digital Score</label>
    <length>32</length>
    <type>Text</type>
</CustomField>