force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__ExternalKeyReference__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ExternalKeyReference__c</fullName>
    <description>External key of the global ATF</description>
    <externalId>true</externalId>
    <label>External Key Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>