force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__ExternalRanking__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ExternalRanking__c</fullName>
    <description>HCP’s rank / rating from government or non-government sources  (not calculated by OneKey, just copy-paste from external source)</description>
    <inlineHelpText>HCP’s rank / rating from government or non-government sources  (not calculated by OneKey, just copy-paste from external source)</inlineHelpText>
    <label>External Ranking</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>