force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__FirstPublicationDate__c.field-meta.xml
<CustomField>
    <fullName>OCE1__FirstPublicationDate__c</fullName>
    <description>HCP&apos;s first publication date from Pubmed</description>
    <inlineHelpText>HCP&apos;s first publication date from Pubmed</inlineHelpText>
    <label>First Publication Date</label>
    <type>Date</type>
</CustomField>