force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__IsGlobal__c.field-meta.xml
<CustomField>
    <fullName>OCE1__IsGlobal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines whether record is marked as Global</description>
    <label>Is Global</label>
    <type>Checkbox</type>
</CustomField>