force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__LastPublicationDate__c.field-meta.xml
<CustomField>
    <fullName>OCE1__LastPublicationDate__c</fullName>
    <description>Most recent publication date</description>
    <inlineHelpText>Most recent publication date</inlineHelpText>
    <label>Last Publication Date</label>
    <type>Date</type>
</CustomField>