force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__LinkedInRelations__c.field-meta.xml
<CustomField>
    <fullName>OCE1__LinkedInRelations__c</fullName>
    <description>A,B,C,D,E,F,0 grade, basing on the number of LinkedIn relations</description>
    <inlineHelpText>A,B,C,D,E,F,0 grade, basing on the number of LinkedIn relations</inlineHelpText>
    <label>LinkedIn Relations</label>
    <length>100</length>
    <type>Text</type>
</CustomField>