force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__LinkedInRelationsNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE1__LinkedInRelationsNumber__c</fullName>
    <description>Number of relations in LinkedIn (manually retrieved)</description>
    <inlineHelpText>Number of relations in LinkedIn (manually retrieved)</inlineHelpText>
    <label>LinkedIn Relations Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>