force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__LinkedInSubscribers__c.field-meta.xml
<CustomField>
    <fullName>OCE1__LinkedInSubscribers__c</fullName>
    <description>A,B,C,D,E,F,0 grade, basing on the number of LinkedIn subscribers</description>
    <inlineHelpText>A,B,C,D,E,F,0 grade, basing on the number of LinkedIn subscribers</inlineHelpText>
    <label>LinkedIn Subscribers</label>
    <length>100</length>
    <type>Text</type>
</CustomField>