force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__LinkedInSubscribersNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE1__LinkedInSubscribersNumber__c</fullName>
    <description>Number of subscribers in LinkedIn (manually retrieved)</description>
    <inlineHelpText>Number of subscribers in LinkedIn (manually retrieved)</inlineHelpText>
    <label>LinkedIn Subscribers Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>