force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__OrcidAuthorId__c.field-meta.xml
<CustomField>
    <fullName>OCE1__OrcidAuthorId__c</fullName>
    <description>ORCID Author unique identification ID</description>
    <inlineHelpText>ORCID Author unique identification ID</inlineHelpText>
    <label>ORCID Author ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>