force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__Patents__c.field-meta.xml
<CustomField>
    <fullName>OCE1__Patents__c</fullName>
    <description>A,B,С,D,E,F,0 grade, basing on the sum of HCP patents</description>
    <inlineHelpText>A,B,С,D,E,F,0 grade, basing on the sum of HCP patents</inlineHelpText>
    <label>Patents</label>
    <length>100</length>
    <type>Text</type>
</CustomField>