force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__PatentsNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE1__PatentsNumber__c</fullName>
    <description>Sum of HCP patents</description>
    <inlineHelpText>Sum of HCP patents</inlineHelpText>
    <label>Patents Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>