force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__PublicationChemicalTerms__c.field-meta.xml
<CustomField>
    <fullName>OCE1__PublicationChemicalTerms__c</fullName>
    <description>List of &quot;Chemical Terms&quot; present in all its publications</description>
    <inlineHelpText>List of &quot;Chemical Terms&quot; present in all its publications</inlineHelpText>
    <label>Publication Chemical Terms</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>