force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__PublicationKeywords__c.field-meta.xml
<CustomField>
    <fullName>OCE1__PublicationKeywords__c</fullName>
    <description>List of &quot;Keywords&quot; present in all its publications</description>
    <inlineHelpText>List of &quot;Keywords&quot; present in all its publications</inlineHelpText>
    <label>Publication Keywords</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>