force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__PublicationsCoAuthorIds__c.field-meta.xml
<CustomField>
    <fullName>OCE1__PublicationsCoAuthorIds__c</fullName>
    <description>List of &quot;PubMed IDs&quot; when it is Co Author</description>
    <inlineHelpText>List of &quot;PubMed IDs&quot; when it is Co Author</inlineHelpText>
    <label>Publications Co-Author IDs</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>