force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__PublicationsFirstAuthorIds__c.field-meta.xml
<CustomField>
    <fullName>OCE1__PublicationsFirstAuthorIds__c</fullName>
    <description>List of &quot;PubMed IDs&quot; when it is First Author</description>
    <inlineHelpText>List of &quot;PubMed IDs&quot; when it is First Author</inlineHelpText>
    <label>Publications First Author IDs</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>