force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__PublicationsLastAuthorIds__c.field-meta.xml
<CustomField>
    <fullName>OCE1__PublicationsLastAuthorIds__c</fullName>
    <description>List of &quot;PubMed IDs&quot; when it is Last Author</description>
    <inlineHelpText>List of &quot;PubMed IDs&quot; when it is Last Author</inlineHelpText>
    <label>Publications Last Author IDs</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>