force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__ResearchGateCitations__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ResearchGateCitations__c</fullName>
    <description>A,B,C,D,E,F,0 grade, basing on the number of ResearchGate Citations</description>
    <inlineHelpText>A,B,C,D,E,F,0 grade, basing on the number of ResearchGate Citations</inlineHelpText>
    <label>ResearchGate Citations</label>
    <length>100</length>
    <type>Text</type>
</CustomField>