force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__ResearchGateCitationsNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ResearchGateCitationsNumber__c</fullName>
    <description>Number of Citations in ResearchGate</description>
    <inlineHelpText>Number of Citations in ResearchGate</inlineHelpText>
    <label>ResearchGate Citations Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>