force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__ResearchGatePublications__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ResearchGatePublications__c</fullName>
    <description>A,B,C,D,E,F,0 grade, basing on the number of ResearchGate Publications</description>
    <inlineHelpText>A,B,C,D,E,F,0 grade, basing on the number of ResearchGate Publications</inlineHelpText>
    <label>ResearchGate Publications</label>
    <length>100</length>
    <type>Text</type>
</CustomField>