force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__ResearchGatePublicationsNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ResearchGatePublicationsNumber__c</fullName>
    <description>Number of Publication in ResearchGate</description>
    <inlineHelpText>Number of Publication in ResearchGate</inlineHelpText>
    <label>ResearchGate Publications Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>