force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__ResearchGateReads__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ResearchGateReads__c</fullName>
    <description>A,B,C,D,E,F,0 grade, basing on the number of ResearchGate Reads</description>
    <inlineHelpText>A,B,C,D,E,F,0 grade, basing on the number of ResearchGate Reads</inlineHelpText>
    <label>ResearchGate Reads</label>
    <length>100</length>
    <type>Text</type>
</CustomField>