force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__ResearchGateReadsNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ResearchGateReadsNumber__c</fullName>
    <description>Number of Reads in ResearchGate</description>
    <inlineHelpText>Number of Reads in ResearchGate</inlineHelpText>
    <label>ResearchGate Reads Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>