force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__ResearchGateRelations__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ResearchGateRelations__c</fullName>
    <description>A,B,C,D,E,F,0 grade, basing on the number of ResearchGate connections</description>
    <inlineHelpText>A,B,C,D,E,F,0 grade, basing on the number of ResearchGate connections</inlineHelpText>
    <label>ResearchGate Relations</label>
    <length>100</length>
    <type>Text</type>
</CustomField>