force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__ResearchGateRelationsNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ResearchGateRelationsNumber__c</fullName>
    <description>Number of relations in Research Gate</description>
    <inlineHelpText>Number of relations in Research Gate</inlineHelpText>
    <label>ResearchGate Relations Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>