force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__ScientificDynamism__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ScientificDynamism__c</fullName>
    <description>HCP activity dynamics in different area: Newcomer (Activity measured in the past 5 years; PubMed, Clinical Trials) Established (Activity measured in the past 6 -10 years; PubMed, Clinical Trials) Matured (Activity measured more than 10+ years ago; PubMed, Clinical Trials)</description>
    <inlineHelpText>HCP activity dynamics in different area: Newcomer (Activity measured in the past 5 years; PubMed, Clinical Trials) Established (Activity measured in the past 6 -10 years; PubMed, Clinical Trials) Matured (Activity measured more than 10+ years ago; PubMed, Clinical Trials)</inlineHelpText>
    <label>Scientific Dynamism</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>