force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__ScientificImpactFactor__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ScientificImpactFactor__c</fullName>
    <description>A,B,С,D,E,F,0 grade, HCPs’ presence in scientific channels: automatically calculated category, basing on the sum of the channels, which the HCP has been identified on. Where F is “low” presence, and A is “high” presence.</description>
    <inlineHelpText>A,B,С,D,E,F,0 grade, HCPs’ presence in scientific channels: automatically calculated category, basing on the sum of the channels, which the HCP has been identified on. Where F is “low” presence, and A is “high” presence.</inlineHelpText>
    <label>Scientific Impact Factor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>