force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__ScientificNetwork__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ScientificNetwork__c</fullName>
    <description>Sum of the followers from other countries (Pubmed, Clinicaltrials)</description>
    <inlineHelpText>Sum of the followers from other countries (Pubmed, Clinicaltrials)</inlineHelpText>
    <label>Scientific Network</label>
    <length>32</length>
    <type>Text</type>
</CustomField>