force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__ScientificRelations__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ScientificRelations__c</fullName>
    <description>A,B,С,D,E,F,0 grade, basing on the number of HCP&apos;s relations from joint publications, trials and ResearchGate network (based on the number of named authors in the publications even if not known/matched to a OneKey Entity)</description>
    <inlineHelpText>A,B,С,D,E,F,0 grade, basing on the number of HCP&apos;s relations from joint publications, trials and ResearchGate network (based on the number of named authors in the publications even if not known/matched to a OneKey Entity)</inlineHelpText>
    <label>Scientific Relations</label>
    <length>100</length>
    <type>Text</type>
</CustomField>