force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__ScientificRelationsNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE1__ScientificRelationsNumber__c</fullName>
    <description>Total HCP&apos;s scientific relations number (based on the number of named authors in the publications even if not known/matched to a OneKey Entity)</description>
    <inlineHelpText>Total HCP&apos;s scientific relations number (based on the number of named authors in the publications even if not known/matched to a OneKey Entity)</inlineHelpText>
    <label>Scientific Relations Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>