force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__SocialMentionNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE1__SocialMentionNumber__c</fullName>
    <description>Number of Social Mentions in digital channels: YouTube, Twitter, etc.</description>
    <inlineHelpText>Number of Social Mentions in digital channels: YouTube, Twitter, etc.</inlineHelpText>
    <label>Social Mention Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>