force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__TreatmentGuidelines__c.field-meta.xml
<CustomField>
    <fullName>OCE1__TreatmentGuidelines__c</fullName>
    <description>A,B,С,D,E,F,0 grade, basing on the sum of cases being a creator of treatment guidelines</description>
    <inlineHelpText>A,B,С,D,E,F,0 grade, basing on the sum of cases being a creator of treatment guidelines</inlineHelpText>
    <label>Treatment Guidelines</label>
    <length>100</length>
    <type>Text</type>
</CustomField>