force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__TreatmentGuidelinesNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE1__TreatmentGuidelinesNumber__c</fullName>
    <description>Sum of cases being a creator of treatment guidelines</description>
    <inlineHelpText>Sum of cases being a creator of treatment guidelines</inlineHelpText>
    <label>Treatment Guidelines Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>