force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__TwitterFollowers__c.field-meta.xml
<CustomField>
    <fullName>OCE1__TwitterFollowers__c</fullName>
    <description>A,B,C,D,E,F,0 grade, basing on the number of Twitter followers</description>
    <inlineHelpText>A,B,C,D,E,F,0 grade, basing on the number of Twitter followers</inlineHelpText>
    <label>Twitter Followers</label>
    <length>100</length>
    <type>Text</type>
</CustomField>