force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__TwitterFollowersNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE1__TwitterFollowersNumber__c</fullName>
    <description>Number of Followers  in Twitter</description>
    <inlineHelpText>Number of Followers  in Twitter</inlineHelpText>
    <label>Twitter Followers Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>