force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__TwitterTweetsActivity__c.field-meta.xml
<CustomField>
    <fullName>OCE1__TwitterTweetsActivity__c</fullName>
    <description>A,B,C,D,E,F,0 grade, basing on the number of HCP&apos;s tweets in Twitter</description>
    <inlineHelpText>A,B,C,D,E,F,0 grade, basing on the number of HCP&apos;s tweets in Twitter</inlineHelpText>
    <label>Twitter Tweets Activity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>