force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE1__TwitterTweetsNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE1__TwitterTweetsNumber__c</fullName>
    <description>Number of tweets in Twitter</description>
    <inlineHelpText>Number of tweets in Twitter</inlineHelpText>
    <label>Twitter Tweets Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>