force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE8__RecommendationJSON__c.field-meta.xml
<CustomField>
    <fullName>OCE8__RecommendationJSON__c</fullName>
    <description>This field contains Product quantity recommendations JSON for Order Grid.</description>
    <inlineHelpText>This field contains Product quantity recommendations JSON for Order Grid.</inlineHelpText>
    <label>Order Recommendation JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>