force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__AbsNumberAverageKOL__c.field-meta.xml
<CustomField>
    <fullName>OCE__AbsNumberAverageKOL__c</fullName>
    <description>Represents a weighted overall score, based on the group of certain parameters</description>
    <label>Average KOL Score</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>