force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__AbsNumberCollaborationNetwork__c.field-meta.xml
<CustomField>
    <fullName>OCE__AbsNumberCollaborationNetwork__c</fullName>
    <description>Number of co-authors on publications, clinical trials, congress, etc.</description>
    <label>Collaboration Network Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>