force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__AbsNumberFirstAuthorProfile__c.field-meta.xml
<CustomField>
    <fullName>OCE__AbsNumberFirstAuthorProfile__c</fullName>
    <description>Sum of the number of cases, when HCP has been FIRST Author publications</description>
    <label>First Author Profile Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>