force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__AbsNumberGrants__c.field-meta.xml
<CustomField>
    <fullName>OCE__AbsNumberGrants__c</fullName>
    <description>Number of grants</description>
    <label>Grants Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>