force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__AbsNumberLastAuthorProfile__c.field-meta.xml
<CustomField>
    <fullName>OCE__AbsNumberLastAuthorProfile__c</fullName>
    <description>Sum of the number of cases, when HCP has been LAST Author publications</description>
    <label>Last Author Profile Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>