force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__AbsNumberPublicationProfile__c.field-meta.xml
<CustomField>
    <fullName>OCE__AbsNumberPublicationProfile__c</fullName>
    <description>Sum of the all HCP&apos;s publications</description>
    <label>Publication Profile Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>