force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__AbsNumberResearcherProfile__c.field-meta.xml
<CustomField>
    <fullName>OCE__AbsNumberResearcherProfile__c</fullName>
    <description>Sum of the number of cases, when HCP was participating in clinical trials</description>
    <label>Researcher Profile Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>