force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__AbsNumberScientificActivity__c.field-meta.xml
<CustomField>
    <fullName>OCE__AbsNumberScientificActivity__c</fullName>
    <description>Number of publications, clinical trials, conferences, the HCP has been  identified on</description>
    <label>Scientific Activity Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>