force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__AbsNumberScientificAudience__c.field-meta.xml
<CustomField>
    <fullName>OCE__AbsNumberScientificAudience__c</fullName>
    <description>Number of publications, clinical trials, conferences, the HCP has been  identified on</description>
    <label>Scientific Audience Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>