force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__AbsNumberScientificPresence__c.field-meta.xml
<CustomField>
    <fullName>OCE__AbsNumberScientificPresence__c</fullName>
    <description>Sum of the scientific channels, which the HCP has been  identified on</description>
    <label>Scientific Presence Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>