force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__AbsNumberSpeakerProfile__c.field-meta.xml
<CustomField>
    <fullName>OCE__AbsNumberSpeakerProfile__c</fullName>
    <description>Sum of the number of cases, when HCP was speaker on different key specialty conferences</description>
    <label>Speaker Profile Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>